Precompiled Windows header overflow fix

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -64,6 +64,7 @@ header, section, footer {
 header {
   margin-top: 2rem;
   overflow: hidden;
+  background:red;
 }
 
 header h1 {
